Refactor getBestSolution and comment
Update comment from "Aplicar la primera solución" to "Aplicar la mejor solución" for clarity. Simplify getBestSolution by removing an explicit null/empty check and returning solutions.getFirst() when size == 1 (more efficient for a LinkedList). Reformat stream indentation; behavior remains the same (returns solution with minimum fitness or null).